--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -100,6 +100,10 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
     margin: 0;
 }
 
+.app-header div span{
+    cursor: pointer;
+}
+
 #clock {
     font-size: 14px;
     font-weight: 500;
