--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
 }
 
