--- a/src/pages/VideoGrid.module.css
+++ b/src/pages/VideoGrid.module.css
@@ -3,7 +3,7 @@
     height: 100%;
 }
 
-.video-grid {
+.videoGrid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 26px;
@@ -11,7 +11,7 @@
   margin-bottom: 500px;
 }
 
-.video-card {
+.videoCard {
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -20,30 +20,30 @@
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.video-card:hover {
+.videoCard:hover {
   transform: translateY(-3px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
-.video-banner {
+.videoBanner {
   width: 100%;
   border-radius: 6px;
   margin-bottom: 8px;
 }
 
-.video-title {
+.videoTitle {
   font-size: 18px;
   margin: 6px 0;
   color: #222;
 }
 
-.video-desc {
+.videoDesc {
   font-size: 14px;
   color: #555;
   margin-bottom: 10px;
 }
 
-.video-iframe {
+.videoIframe {
   width: 100%;
   height: 200px;
   border-radius: 6px;
@@ -51,7 +51,7 @@
 
 /* Responsif */
 @media (max-width: 768px) {
-  .video-grid {
+  .videoGrid {
     grid-template-columns: 1fr;
   }
 }
