--- a/src/pages/components/Chatbot.module.css
+++ b/src/pages/components/Chatbot.module.css
@@ -1,10 +1,8 @@
-.chatbot-container {
+.container {
   width: 80%;
-   height: 90%;
+  height: 90%;
   margin: 20px auto;
-  /* border: 1px solid #ccc; */
   border-radius: 10px;
-  /* background: #fafafa; */
   display: flex;
   flex-direction: column;
   padding: 16px;
@@ -12,25 +10,13 @@
   max-height: 100%;
 }
 
-.chatbot-title {
-  text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 10px;
-  color: #333;
-}
-
 .chatbox {
   flex: 1;
-
-  /* border: 1px solid #ddd; */
   border-radius: 6px;
   padding: 10px;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  /* background: #fff; */
-  overflow: scroll;
   justify-content: flex-end;
 }
 
@@ -43,13 +29,13 @@
   font-size: 14px;
 }
 
-.message.user {
+.user {
   align-self: flex-end;
   background-color: #3498db;
   color: white;
 }
 
-.message.bot {
+.bot {
   align-self: flex-start;
   background-color: #e9e9e9;
   color: #333;
@@ -62,14 +48,14 @@
   margin-top: 5px;
 }
 
-.input-container {
+.inputContainer {
   bottom: 20px;
   display: flex;
   margin-top: 12px;
   gap: 8px;
 }
 
-.chat-input {
+.chatInput {
   flex: 1;
   padding: 8px 10px;
   border: 1px solid #ccc;
@@ -77,12 +63,12 @@
   font-size: 14px;
 }
 
-.chat-input:focus {
+.chatInput:focus {
   outline: none;
   border-color: #3498db;
 }
 
-.chat-button {
+.chatButton {
   padding: 8px 16px;
   background-color: #3498db;
   color: white;
@@ -92,11 +78,11 @@
   font-weight: 500;
 }
 
-.chat-button:hover {
+.chatButton:hover {
   background-color: #2d83c5;
 }
 
-.chat-button:disabled {
+.chatButton:disabled {
   background-color: #9bbbd4;
   cursor: not-allowed;
 }
