--- a/src/pages/components/NodeEditor.module.css
+++ b/src/pages/components/NodeEditor.module.css
@@ -1,30 +1,27 @@
-.editor-container {
-  /* max-width: 600px; */
+.container {
   margin: 40px auto;
   background: #f3f4f6;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   font-family: monospace;
-
-   padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.editor-container h2 {
+.container h2 {
   text-align: center;
   margin-bottom: 20px;
   color: #111827;
 }
 
-.egdeContainer{
+.edgeContainer {
   display: grid;
   gap: 14px;
 }
 
-input[type=file]{
+input[type=file] {
   height: 100px;
   width: 100px;
   background-size: 60%;
@@ -57,7 +54,6 @@ option {
   background-color: #fff;
   color: #222;
 }
-
 
 button {
   background-color: #3498db;
