--- a/src/pages/TRPL.module.css
+++ b/src/pages/TRPL.module.css
@@ -15,12 +15,13 @@
 }
 
 .section {
+  margin-bottom: 100vh;
   width: 100vw;
   max-width: 100vw;
   margin: 0 auto 100px auto;
   text-align: center;
   border: 1px solid blue;
-  background-color: rgb(49, 24, 24);
+  /* background-color: rgb(49, 24, 24); */
 }
 
 .section h2 {
@@ -35,21 +36,28 @@
 }
 
 .content {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 30px;
+
+  margin-top: 400px;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .content {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
   }
-}
+} */
 
-.video-wrapper {
+.videoWrapper {
+  display: flex;
+  justify-content:center ;
+  align-items: center;
   background: black;
   border-radius: 10px;
   overflow: hidden;
@@ -57,9 +65,10 @@
   width: 100%;
   max-width: 500px;
   aspect-ratio: 16 / 9;
+  background-color: #bfdbfe;
 }
 
-.video-wrapper iframe {
+.videoWrapper iframe {
   width: 100%;
   height: 100%;
   border: none;
