--- a/src/pages/TRPL.module.css
+++ b/src/pages/TRPL.module.css
@@ -1,109 +1,120 @@
 .container {
-  width: 100vw;
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-.header {
-  text-align: center;
-  margin-bottom: 60px;
-}
-
-.header h1 {
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.section {
-  margin-bottom: 100vh;
-  width: 100vw;
-  max-width: 100vw;
-  margin: 0 auto 100px auto;
-  text-align: center;
-  border: 1px solid blue;
-  /* background-color: rgb(49, 24, 24); */
-}
-
-.section h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.description {
-  font-size: 16px;
-  color: #dbeafe;
-  margin-bottom: 30px;
-}
-
-.content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-
-  margin-top: 400px;
-}
-
-/* @media (min-width: 768px) {
-  .content {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-} */
-
-.videoWrapper {
-  display: flex;
-  justify-content:center ;
-  align-items: center;
-  background: black;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  width: 100%;
-  max-width: 500px;
-  aspect-ratio: 16 / 9;
-  background-color: #bfdbfe;
-}
-
-.videoWrapper iframe {
   width: 100%;
   height: 100%;
-  border: none;
+  background-color: black;
+  scroll-snap-type: y mandatory;
+  text-shadow: 1px 1px 1px #00000063;
 }
 
-.team {
+.page {
+  height: 100vh;
+  padding: 50px;
   display: flex;
-  gap: 20px;
+  align-items: flex-start;
   justify-content: center;
-  flex-wrap: wrap;
 }
 
-.member {
+.pageContent {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 30px;
+}
+
+.pageTitle {
   color: white;
+  font-weight: bolder;
+  text-decoration: none;
 }
 
-.member img {
+.pageTitle h1 {
+  position: relative;
+  display: inline-block;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.pageTitle h1::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 0%;
+  height: 3px;
+  background-color: #4ea1ff;
+  transition: width 0.4s ease;
+}
+
+.pageTitle h1:hover {
+  transform: scale(1.05);
+  color: #4ea1ff;
+  cursor: pointer;
+}
+
+.pageTitle h1:hover::after {
+  width: 100%;
+}
+
+
+.jsonBlock {
+  color: #ccc;
+  font-weight: 800;
+  border-radius: 8px;
+  white-space: pre-wrap;
+}
+
+.teamContainer {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-start;
+}
+
+.teamCard {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.teamPhoto {
+  height: 150px;
   width: 150px;
-  height: 220px;
+  display: flex;
+  background-size: cover;
   border-radius: 10px;
-  object-fit: cover;
-  background: #d1d5db;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
-.member p {
-  margin-top: 8px;
-  font-size: 14px;
+.planetLayer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
 }
 
-.slogan {
-  font-style: italic;
-  color: #bfdbfe;
-  margin-top: 40px;
+
+.teamPhoto {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  background-size: cover;
+  border-radius: 10px;
+  transition: transform 0.4s ease, box-shadow 0.4s ease, filter 0.4s ease;
+}
+
+.teamPhoto:hover {
+  transform: scale(1.2) rotate(5deg);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+  filter: brightness(1.2) contrast(1.1);
+  cursor: pointer;
+}
+
+.social{
+  margin-top: -25px;
+  width: 50%;
+  display: flex;
+  /* background-color: red; */
+  justify-content: space-between;
+}
+
+.social a img:hover{
+  transform: scale(2) rotate(-5deg);
 }
